manifests/argo-events/templates/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argo-events-webhook
  namespace: argo
spec:
  entryPoints:
    - websecure
  tls:
    certResolver: letsencrypt
  routes:
    - match: Host(`ci.boukingolts.art`)
      kind: Rule
      services:
        # Service name is auto-generated by the EventSource controller:
        # <eventsource-name>-eventsource-svc
        - name: gallery-github-eventsource-svc
          port: 12000
